favicon change and solved build error

--- a/gold-admin-frontend/src/index.html
+++ b/gold-admin-frontend/src/index.html
@@ -13,11 +13,11 @@ License: You must have a valid license purchased only from https://themeforest.n
 
 <head>
 	<meta charset="utf-8">
-	<title>Metronic | Angular Demo</title>
+	<title>Augmont</title>
 	<base href="/">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="./assets/media/logos/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="./assets/media/logos/favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700" rel="stylesheet">
 
 	<script src="assets/js/global/components/base/util.js" type="application/javascript"></script>
