--- a/gold-admin-frontend/src/index.html
+++ b/gold-admin-frontend/src/index.html
@@ -18,7 +18,8 @@ License: You must have a valid license purchased only from https://themeforest.n
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="./assets/media/logos/favicon.png">
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700"
+		rel="stylesheet">
 
 	<script src="assets/js/global/components/base/util.js" type="application/javascript"></script>
 	<script src="assets/js/global/components/base/header.js" type="application/javascript"></script>
