Changes in payment integration

--- a/gold-admin-frontend/src/index.html
+++ b/gold-admin-frontend/src/index.html
@@ -21,6 +21,8 @@ License: You must have a valid license purchased only from https://themeforest.n
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700"
 		rel="stylesheet">
 
+	<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
 	<script src="assets/js/global/components/base/util.js" type="application/javascript"></script>
 	<script src="assets/js/global/components/base/header.js" type="application/javascript"></script>
 	<script src="assets/js/global/components/base/menu.js" type="application/javascript"></script>
@@ -31,6 +33,8 @@ License: You must have a valid license purchased only from https://themeforest.n
 	<script src="assets/js/global/components/base/wizard.js" type="application/javascript"></script>
 </head>
 
-<body kt-root></body>
+<body>
+	<kt-root></kt-root>
+</body>
 
 </html>
